--- a/169. Majority Element.md
+++ b/169. Majority Element.md
@@ -1,4 +1,4 @@
-## [169. Majority Element][1]
+## 169. Majority Element
 
 > Given an array of size n, find the majority element. The majority
 > element is the element that appears more than ⌊ n/2 ⌋ times.
