--- a/225. Implement Stack using Queues.md
+++ b/225. Implement Stack using Queues.md
@@ -1,4 +1,4 @@
-## [225. Implement Stack using Queues][3]
+## 225. Implement Stack using Queues
 
 >  Implement the following operations of a stack using queues.
 >
