--- a/402. Remove K Digits.md
+++ b/402. Remove K Digits.md
@@ -1,4 +1,4 @@
-## [402. Remove K Digits][5]
+## 402. Remove K Digits
 
 > Given a non-negative integer num represented as a string, remove k digits from the number so that the new number is the smallest possible.
 
