--- a/628. Maximum Product of Three Numbers.md
+++ b/628. Maximum Product of Three Numbers.md
@@ -1,4 +1,4 @@
-## [628. Maximum Product of Three Numbers][2]
+## 628. Maximum Product of Three Numbers
 
 > Given an integer array, find three numbers whose product is maximum and output the maximum product.
 
