--- a/670. Maximum Swap.md
+++ b/670. Maximum Swap.md
@@ -1,4 +1,4 @@
-##[670. Maximum Swap][4]
+##670. Maximum Swap
 
 >  Given a non-negative integer, you could swap two digits at most once to get the maximum valued number. Return the maximum valued number you could get.
 
