--- a/680. Valid Palindrome II.md
+++ b/680. Valid Palindrome II.md
@@ -1,4 +1,4 @@
-## [680. Valid Palindrome II][3]
+## 680. Valid Palindrome II
 
 >  Given a non-empty string s, you may delete at most one character. Judge whether you can make it a palindrome.
 
