--- a/689. Maximum Sum of 3 Non-Overlapping Subarrays.md
+++ b/689. Maximum Sum of 3 Non-Overlapping Subarrays.md
@@ -1,4 +1,4 @@
-##[689. Maximum Sum of 3 Non-Overlapping Subarrays][7]
+##689. Maximum Sum of 3 Non-Overlapping Subarrays
 
 > In a given array nums of positive integers, find three non-overlapping subarrays with maximum sum.
 
