--- a/713. Subarray Product Less Than K.md
+++ b/713. Subarray Product Less Than K.md
@@ -1,4 +1,4 @@
-##[713. Subarray Product Less Than K][3]
+##713. Subarray Product Less Than K
 
 >Your are given an array of positive integers nums.
 
