--- a/714. Best Time to Buy and Sell Stock with Transaction Fee.md
+++ b/714. Best Time to Buy and Sell Stock with Transaction Fee.md
@@ -1,4 +1,4 @@
-##[714. Best Time to Buy and Sell Stock with Transaction Fee][5]
+##714. Best Time to Buy and Sell Stock with Transaction Fee
 
 
 > Your are given an array of integers prices, for which the i-th element is the price of a given stock on day i; and a non-negative integer fee representing a transaction fee.
