--- a/718. Maximum Length of Repeated Subarray.md
+++ b/718. Maximum Length of Repeated Subarray.md
@@ -1,4 +1,4 @@
-##[718. Maximum Length of Repeated Subarray][3]
+##718. Maximum Length of Repeated Subarray
 
 >Given two integer arrays A and B, return the maximum length of an subarray that appears in both arrays.
 
