--- a/724. Find Pivot Index.md
+++ b/724. Find Pivot Index.md
@@ -1,4 +1,4 @@
-## [724. Find Pivot Index][4]
+## 724. Find Pivot Index
 
 > Given an array of integers nums, write a method that returns the "pivot" index of this array.
 
