--- a/766. Toeplitz Matrix.md
+++ b/766. Toeplitz Matrix.md
@@ -1,4 +1,4 @@
-## [766. Toeplitz Matrix][1]
+## 766. Toeplitz Matrix
 
 > A matrix is Toeplitz if every diagonal from top-left to bottom-right has the same element.
 >
