--- a/767. Reorganize String.md
+++ b/767. Reorganize String.md
@@ -1,4 +1,4 @@
-## [767. Reorganize String][4]
+## 767. Reorganize String
 
 > Given a string S, check if the letters can be rearranged so that two characters that are adjacent to each other are not the same.
 
