--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -1,4 +1,4 @@
-##[121. Best Time to Buy and Sell Stock][2]
+##121. Best Time to Buy and Sell Stock
 
 > Say you have an array for which the ith element is the price of a given stock on day i.
 
