--- a/136. Single Number.md
+++ b/136. Single Number.md
@@ -1,4 +1,4 @@
-## [136. Single Number][2]
+## 136. Single Number
 
 > Given an array of integers, every element appears twice except for one. Find that single one.
 
