--- a/456. 132 Pattern.md
+++ b/456. 132 Pattern.md
@@ -1,4 +1,4 @@
-## [456. 132 Pattern][4]
+## 456. 132 Pattern
 
 >  Given a sequence of n integers a1, a2, ..., an, a 132 pattern is a subsequence ai, aj, ak such that i < j < k and ai < ak < aj. Design an algorithm that takes a list of n numbers as input and checks whether there is a 132 pattern in the list.
 
