--- a/633. Sum of Square Numbers.md
+++ b/633. Sum of Square Numbers.md
@@ -1,4 +1,4 @@
-## [633. Sum of Square Numbers][1]
+## 633. Sum of Square Numbers
 
 >  Given a non-negative integer c, your task is to decide whether there're two integers a and b such that a2 + b2 = c.
 
