--- a/665. Non-decreasing Array.md
+++ b/665. Non-decreasing Array.md
@@ -1,4 +1,4 @@
-## [665. Non-decreasing Array][2]
+## 665. Non-decreasing Array
 
 >  Given an array with n integers, your task is to check if it could become non-decreasing by modifying at most 1 element.
 
