--- a/672. Bulb Switcher II.md
+++ b/672. Bulb Switcher II.md
@@ -1,4 +1,4 @@
-## [672. Bulb Switcher II][3]
+## 672. Bulb Switcher II
 
 >  There is a room with n lights which are turned on initially and 4 buttons on the wall. After performing exactly m unknown operations towards buttons, you need to return how many different kinds of status of the n lights could be.
 
