--- a/674. Longest Continuous Increasing Subsequence.md
+++ b/674. Longest Continuous Increasing Subsequence.md
@@ -1,4 +1,4 @@
-##[674. Longest Continuous Increasing Subsequence][1]
+##674. Longest Continuous Increasing Subsequence
 
 >  Given an unsorted array of integers, find the length of longest continuous increasing subsequence (subarray).
 
