--- a/686. Repeated String Match.md
+++ b/686. Repeated String Match.md
@@ -1,4 +1,4 @@
-## [686. Repeated String Match][2]
+## 686. Repeated String Match
 
 > Given two strings A and B, find the minimum number of times A has to be repeated such that B is a substring of it. If no such solution, return -1.
 
