--- a/697. Degree of an Array.md
+++ b/697. Degree of an Array.md
@@ -1,4 +1,4 @@
-## [697. Degree of an Array][2]
+## 697. Degree of an Array
 
 >Given a non-empty array of non-negative integers nums, the degree of this array is defined as the maximum frequency of any one of its elements.
 
