--- a/768. Max Chunks To Make Sorted II.md
+++ b/768. Max Chunks To Make Sorted II.md
@@ -1,4 +1,4 @@
-## [768. Max Chunks To Make Sorted II][10]
+## 768. Max Chunks To Make Sorted II
 
 >This question is the same as "Max Chunks to Make Sorted" except the integers of the given array are not necessarily distinct, the input array could be up to length 2000, and the elements could be up to 10**8.
 
