--- a/769. Max Chunks To Make Sorted.md
+++ b/769. Max Chunks To Make Sorted.md
@@ -1,4 +1,4 @@
-## [769. Max Chunks To Make Sorted][6]
+## 769. Max Chunks To Make Sorted
 
 > Given an array arr that is a permutation of [0, 1, ..., arr.length - 1], we split the array into some number of "chunks" (partitions), and individually sort each chunk.  After concatenating them, the result equals the sorted array.
 >
