--- a/775. Global and Local Inversions.md
+++ b/775. Global and Local Inversions.md
@@ -1,4 +1,4 @@
-## [775. Global and Local Inversions][5]
+## 775. Global and Local Inversions
 
 > We have some permutation A of [0, 1, ..., N - 1], where N is the length of A. The number of (global) inversions is the number of i < j with 0 <= i < j < N and A[i] > A[j]. The number of local inversions is the number of i with 0 <= i < N and A[i] > A[i+1]. Return true if and only if the number of global inversions is equal to the number of local inversions.
 >
