--- a/88. Merge Sorted Array.md
+++ b/88. Merge Sorted Array.md
@@ -1,4 +1,4 @@
-## [88. Merge Sorted Array][3]
+## 88. Merge Sorted Array
 
 > Given two sorted integer arrays nums1 and nums2, merge nums2 into nums1 as one sorted array.
 
