--- a/662. Maximum Width of Binary Tree.md
+++ b/662. Maximum Width of Binary Tree.md
@@ -56,6 +56,7 @@
 >     5       9 
 >    /         \
 >   6           7
+
 >Output: 8
 >Explanation:The maximum width existing in the fourth level with the length 8 (6,null,null,null,null,null,null,7).
 
@@ -70,7 +71,16 @@
 
 【代码】
 ```
-    int widthOfBinaryTree(TreeNode* root) {
+   /**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+   int widthOfBinaryTree(TreeNode* root) {
         if (!root) return 0;
         int maxnum = 0;
         queue<pair<TreeNode*, int>> q;
