--- a/828. Unique Letter String.md
+++ b/828. Unique Letter String.md
@@ -26,5 +26,49 @@ Explanation: The same as example 1, except uni("ABA") = 1.
 
 【思路】
 
-最朴素的做法是，两个for，固定起始位置，map<char,int>维护当前的字母出现了几次，如果是0次，唯一字母数tot++，每次ans+=tot。
+最朴素的做法是，两个for，固定起始位置，map<char,int>维护当前的字母出现了几次，如果是0次，唯一字母数tot++，每次ans+=tot。这样貌似逃不掉O(n^2)...
+
+想了半天没想出来看了discuss...贼简单...贼...简单...单...
+
+是一个O(N)的做法，因为S中只会出现26个大写字母，那么只要分别统计A~Z，找出这个字母独立出现的区段。比如：A....A...A 这样的，标记这三个A的位置分别为left, pos, right，那么这个中间段就是一个“独立出现的区段”，总子段个数就是` (right-pos)*(pos-left) `（从中间那个A的左侧选、右侧随便选一个位置做端点）
+
+
+
+
+
+【代码】
+
+```
+class Solution {
+public:
+    int uniqueLetterString(string S) {
+    	int ans = 0;
+        for(int i = 0; i < 26; i++)
+		{
+			char now = 'A'+i;
+			int pos = -1, left = -1;
+			bool flag = false;
+			for(int right = 0; right < S.length(); right++)
+			{
+				if(S[right] == now) 
+				{
+					if(flag)
+					{
+						ans += (right-pos)*(pos-left);
+						left = pos;
+						pos = right;
+					} 
+					else
+					{
+						flag = true;
+						pos = right;
+					} 
+				}
+				if(right == S.length()-1) ans += (right-pos+1)*(pos-left);
+			}
+		} 
+		return ans;
+    }
+};
+```
 
