--- a/202. Happy Number.md
+++ b/202. Happy Number.md
@@ -26,6 +26,18 @@ Explanation:
 
 
 
+关于为什么会是一个圈的证明：
+
+首先，这个操作一直做下去是一个无穷序列，如果存在一个上界，那么就必然形成圈（无穷映射到有穷，鸽笼定理）。将这个操作记做f(x)，那么也即f(x)有上界。
+
+事实上，f(x)多大是与x的位数有关的，假设x有m位，那么显然 f(x) <= m * 9^2。
+
+直观的看一个造成循环的例子：如果m=1，f(x) <= 81，可能变成2位了，现在f(f(x)) <= 162，可能变成3位，现在f(f(f(x))) <= 243。到这里，发现开始进入循环了，因为最大的243也是一个3位的数字，再做 f 操作还是不会超过上界243。再看看如果x是4位时，f(x) <= 324，回去循环了。
+
+也就是：本以为一个很大的数，做个 f 操作就变的很小了。事实上，也即 x -> lg(x)*81，而对数的增长速度是小于 x 的，一直做这个 f 操作总会循环回去的。
+
+
+
 【代码】
 
 ```
