--- a/834. Sum of Distances in Tree.md
+++ b/834. Sum of Distances in Tree.md
@@ -34,7 +34,7 @@ Note: `1 <= N <= 10000`
 
 
 
-![picture834](D:\LeetCode-MySolution\picture834.png)
+![picture834](https://raw.githubusercontent.com/thousfeet/LeetCode-MySolution/master/picture834.png)
 
 
 
