--- a/834. Sum of Distances in Tree.md
+++ b/834. Sum of Distances in Tree.md
@@ -62,3 +62,85 @@ F(父) = 父到N1 + 父到子 + 父到N2  -> `F(father) = M(father, N1) + 1 + M(
 
 
 
+【代码】
+
+```
+class Solution {
+public:
+	vector<vector<int>> nodes; //各结点的子结点 存树 
+	vector<int> sonTree; //子树结点数 
+	vector<int> isVis;
+	
+	int culSon(int n)
+	{
+        isVis[n] = 1;
+        sonTree[n] = 0;
+		for(int i = 0; i < nodes[n].size(); i++) 
+		{
+			int tmp = nodes[n][i];
+			if(isVis[tmp])
+			{
+				nodes[n].erase(nodes[n].begin()+i);
+				i--;
+				continue;
+			}
+			sonTree[n] += 1+culSon(nodes[n][i]);
+		} 
+		return sonTree[n]; 
+	}
+	
+	int f(int n,int level)
+	{
+		level++;
+		int sonNum = nodes[n].size();
+		int ans = sonNum*level;
+		for(int i = 0; i < sonNum; i++) ans += f(nodes[n][i],level);
+		return ans;
+	}
+	
+    static bool cmp(pair<int,int> p1, pair<int,int> p2)
+    {
+        return p1.first < p2.first;
+    }
+    
+    vector<int> sumOfDistancesInTree(int N, vector<vector<int>>& edges) {
+        nodes.resize(N);
+        sonTree.resize(N);
+        isVis.resize(N,0);
+        
+        //preteat
+		for(int i = 0; i < edges.size(); i++)
+		{
+            nodes[edges[i][0]].push_back(edges[i][1]);	
+            nodes[edges[i][1]].push_back(edges[i][0]);	
+     	}
+     	
+     	//计算各结点的子树结点数
+		culSon(0); 
+        
+		//work
+        vector<int> ans;
+        vector<pair<int,int>> find; //node,F(node)
+        find.push_back({0,f(0,0)});
+		for(int i = 0; i < find.size(); i++)
+		{
+            int father = find[i].first;
+			int Ffather = find[i].second;
+			for(int j = 0; j < nodes[father].size(); j++)
+			{
+				int son = nodes[father][j];
+				int N1 = sonTree[son];
+				int Fson = Ffather+N-2*N1-2;
+                find.push_back({son,Fson});
+			}	
+		}
+		
+        sort(find.begin(), find.end(), cmp);
+        for(int i = 0; i < find.size(); i++) ans.push_back(find[i].second);
+		return ans;
+    }
+};
+```
+
+
+
