--- a/537. Complex Number Multiplication.md
+++ b/537. Complex Number Multiplication.md
@@ -1,2 +1,44 @@
 ## [537. Complex Number Multiplication](https://leetcode.com/problems/complex-number-multiplication/description/)
 
+【题意】
+
+两个复数求和
+
+**Example 1:**
+
+```
+Input: "1+1i", "1+1i"
+Output: "0+2i"
+Explanation: (1 + i) * (1 + i) = 1 + i2 + 2 * i = 2i, and you need convert it to the form of 0+2i.
+```
+
+**Example 2:**
+
+```
+Input: "1+-1i", "1+-1i"
+Output: "0+-2i"
+Explanation: (1 - i) * (1 - i) = 1 + i2 - 2 * i = -2i, and you need convert it to the form of 0+-2i.
+```
+
+
+
+【思路】
+
+练习sscanf和sprintf
+
+
+
+【代码】
+
+```
+string complexNumberMultiply(string a, string b) {
+    char t[200];
+    int m, n, p, q;
+    sscanf(a.c_str(), "%d+%di", &m, &n);
+    sscanf(b.c_str(), "%d+%di", &p, &q);
+    sprintf(t, "%d+%di", (m*p-n*q), (n*p+m*q));
+    string ans = t;
+    return ans;
+}
+```
+
