--- a/40. Combination Sum II.md
+++ b/40. Combination Sum II.md
@@ -1,3 +1,80 @@
 ##  [40. Combination Sum II](https://leetcode.com/problems/combination-sum-ii/description/)
 
-【题意】
+【题意】 
+
+给了一组数和一个target，问由这组数中取任意个和为target的所有方法。
+
+**Example 1:**
+
+```
+Input: candidates = [10,1,2,7,6,1,5], target = 8,
+A solution set is:
+[
+  [1, 7],
+  [1, 2, 5],
+  [2, 6],
+  [1, 1, 6]
+]
+```
+
+**Example 2:**
+
+```
+Input: candidates = [2,5,2,1,2], target = 5,
+A solution set is:
+[
+  [1,2,2],
+  [5]
+]
+```
+
+
+
+【思路】
+
+仿佛是0-1背包的样子，但不懂要怎么维护方案。瞟了眼discuss结果全是dfs...orz
+
+要注意不能有重复的方案，所以要sort一下再扔进vector方便find判重。以及一定要判`sum > tar` 时return不然会T。
+
+
+
+【代码】
+
+```
+class Solution {
+public:
+	vector<vector<int>> ans;
+	vector<int> tmp;
+	vector<int> can;
+	int tar;
+	
+	void dfs(int index, int sum)
+	{    
+        if(sum == tar) 
+		{
+			sort(tmp.begin(), tmp.end());
+			if(find(ans.begin(), ans.end(), tmp) == ans.end()) ans.push_back(tmp);
+		}
+        if(index >= can.size() || sum > tar) return;
+        
+		tmp.push_back(can[index]);
+		dfs(index+1, sum+can[index]);
+		
+		tmp.pop_back();
+		dfs(index+1, sum);
+	}
+	
+    vector<vector<int>> combinationSum2(vector<int>& candidates, int target) {
+        sort(candidates.begin(), candidates.end());
+        can = candidates;
+        tar = target;
+        dfs(0,0);
+        return ans;
+    }
+};
+```
+
+
+
+
+
