--- a/104. Maximum Depth of Binary Tree.md
+++ b/104. Maximum Depth of Binary Tree.md
@@ -33,3 +33,10 @@ public:
 };
 ```
 
+更简单的写法，提交发现时间上貌似也没差太多
+```
+    int maxDepth(TreeNode* root) {
+        if(root == NULL) return 0;
+        return max(maxDepth(root->left), maxDepth(root->right))+1;
+    }
+```
