--- a/169. Majority Element.md
+++ b/169. Majority Element.md
@@ -57,5 +57,16 @@ int majorityElement(int* nums, int numsSize) {
 判断栈空：top = -1
 以及初始化 a[numsSize] 的时候，如果直接 a[numsSize] = {-10086} 这样在LeetCode上会报错，只能使用memset，似乎是跟编译器（C99）有关
 
+【另一种写法】
+看过编程之美后知道还有一种更优雅的写法：显然排序后中间那个位置就是所求答案，所以一行 sort 就可以解决。虽然复杂度是 O(NlogN) 比前两种都高但是代码简单。
+
+```
+    int majorityElement(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size();
+        return nums[n/2];
+    }
+```
+
 
 [1]: https://leetcode.com/problems/majority-element/description/
