--- a/733. Flood Fill.md
+++ b/733. Flood Fill.md
@@ -53,3 +53,31 @@ public:
 };
 ```
 
+【BFS 的写法】
+```
+    vector<vector<int>> floodFill(vector<vector<int>>& image, int sr, int sc, int newColor) {
+        int old = image[sr][sc];
+        if(old == newColor) return image;
+        int row = image.size();
+        int col = image[0].size();
+        int move[4][2] = {-1,0,1,0,0,1,0,-1};
+        queue<pair<int,int>> que;
+        que.push({sr,sc});
+        while(!que.empty())
+        {
+            pair<int,int> tmp = que.front();
+            que.pop();
+            int x = tmp.first;
+            int y = tmp.second;
+            image[x][y] = newColor;
+            for(int i = 0; i < 4; i++)
+            {
+                int x1 = x+move[i][0];
+                int y1 = y+move[i][1];
+                if(0 <= x1 && x1 < row && 0 <= y1 && y1 < col && image[x1][y1] == old)
+                    que.push({x1,y1});
+            }
+        }
+        return image;
+    }
+```
