--- a/746. Min Cost Climbing Stairs.md
+++ b/746. Min Cost Climbing Stairs.md
@@ -19,13 +19,9 @@
 >     Every cost[i] will be an integer in the range [0, 999].
 
 【思路】
-本来在那边兴致勃勃的瞎贪心，贪第一个样例就显然不对了..于是乖乖的开始动规...
-
-偷偷百度了一下小学奥数题走楼梯怎么写的，噢原来就是那个传说中的经典题解，当前方案等于前一节楼梯+前两节楼梯的方案和。搜嘎那我就会了..（一拳就是一个...x）大致思路就是，当到达第 i 节楼梯的总cost值，要不然就是 i-1 那节的总数值加上第 i 节的cost，要不然就是 i-2 那节的总数值加上第 i 节的cost，取一个最小的就好了。（从结果是怎么来的往前想，而不是从第一步往后想这种，也不失为一个好办法）
+当到达第 i 节楼梯的总cost值，要不然就是 i-1 那节的总数值加上第 i 节的cost，要不然就是 i-2 那节的总数值加上第 i 节的cost，取一个最小的就好了。（从结果是怎么来的往前想，而不是从第一步往后想这种，也不失为一个好办法）
 
 中间那段代码因为早上被边界坑惨了于是特判了一下边界防RE，如果当前step超过cost数组长度，手动给这个cost值赋值0。
-
-然后写递归写超时了...于是还是老办法，拿了个dp数组来存之前算过的值（以 i 节楼梯为终点的cost），之后就可以直接判断如果dp不为0，算过了的就不用再递归。
 
 LeetCode用全局变量数组会出事，没有手动初始化不会给默认0，所以要手动memset。
 
@@ -53,4 +49,21 @@ int minCostClimbingStairs(int* cost, int costSize) {
 	memset(dp,0,sizeof(dp));
 	return sum(costSize+1,cost,costSize);
 }
+```
+
+【非递归的 dp 写法】
+ans[i]表示站在台阶 i 时的总价值，因此需要先把最后一级台阶顶 push 个 0 进去。
+```
+    int ans[1007];
+    int minCostClimbingStairs(vector<int>& cost) {
+        cost.push_back(0);
+        int len = cost.size();
+        ans[0] = cost[0];
+        ans[1] = cost[1];
+        for(int i = 2; i < len; i++)
+        {
+            ans[i] = min(ans[i-1]+cost[i], ans[i-2]+cost[i]);
+        }
+        return ans[len-1];
+    }
 ```
